Changed font from 25 to 24 on play area wrapper headline, but in prior commit fixed overflow issue with box that shows all the questions you've asked

--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@ body {
 }
 #playareaheadline {
   font-weight: bold;
-  font-size: 25px;
+  font-size: 24px;
   border-style: dotted;
   text-align: center;
   background-color: orange;
